# binary-converter

./: CMakeLists.txt  README.md
src/: main.c  serial.c  serial.h
